# lspc

./: .gitignore  Cargo.toml  DEVELOPMENT  README.md
.github/workflows/: merge-bot.yml  rust.yml
autoload/: lspc.vim
autoload/lspc/: buffer.vim  command.vim
design/: README.md  components.puml
plugin/: lspc.vim
src/: lib.rs  lspc.rs  main.rs  neovim.rs  rpc.rs
src/lspc/: handler.rs  lsp_msg.rs  msg.rs  tracking_file.rs  transport.rs  types.rs
src/neovim/: nvim_msg.rs
src/rpc/: client.rs
