[package]
name = "lspc"
version = "0.1.0"
authors = ["Unreal Hoang <unrealhoang@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
crossbeam = "*"
rmpv = { git = "https://github.com/unrealhoang/msgpack-rust", branch = "support-serde-ext", version = "*", features = ["with-serde"] }
url_serde = "*"
serde_json = "*"
log = "*"
lazy_static = "1.3.0"
lsp-types = { version = "0.61.0", features = ["proposed"] }
simple-logging = "*"
url = "*"
