[package]
name = "lspc"
version = "0.1.0"
authors = ["Unreal Hoang <unrealhoang@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
crossbeam = "*"
rmpv = { git = "https://github.com/3Hren/msgpack-rust", version = "*", features = ["with-serde"] }
url_serde = "*"
serde_json = "*"
log = "*"
lazy_static = "1.3.0"
lsp-types = { version = "0.61.0", features = ["proposed"] }
simple-logging = "*"
url = "*"
dirs = "2.0.2"
bimap = "0.4"
